deploy/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-ingress
spec:
  rules:
  - host: grafana.${PRIVATE_HOST}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-grafana-service
            port:
              number: 3000
  - host: grafana.${PUBLIC_HOST}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: monitoring-grafana-service
            port:
              number: 3000
